[gd_scene load_steps=2 format=3 uid="uid://t0yggkesna36"]

[ext_resource type="Script" path="res://scripts/controllers/gameController.gd" id="1_xnhcl"]

[node name="main" type="CanvasLayer"]
script = ExtResource("1_xnhcl")

[node name="conteudo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Questoes" type="VBoxContainer" parent="conteudo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -361.0
offset_right = 361.0
offset_bottom = 336.0
grow_horizontal = 2

[node name="LabelPegunta" type="Label" parent="conteudo/Questoes"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "PERGUNTA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ImagemHolder" type="Panel" parent="conteudo/Questoes"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="QuestionImagem" type="TextureRect" parent="conteudo/Questoes/ImagemHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuestionVideo" type="VideoStreamPlayer" parent="conteudo/Questoes/ImagemHolder"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="QuestionAudio" type="AudioStreamPlayer" parent="conteudo/Questoes/ImagemHolder"]

[node name="QuestionHolder" type="VBoxContainer" parent="conteudo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -359.0
offset_top = -772.0
offset_right = 359.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ButtonOption1" type="Button" parent="conteudo/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonOption2" type="Button" parent="conteudo/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonOption3" type="Button" parent="conteudo/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonOption4" type="Button" parent="conteudo/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
